fix: breaks in corners on the dropdown menu

--- a/frontend/express/public/stylesheets/styles/blocks/_select.scss
+++ b/frontend/express/public/stylesheets/styles/blocks/_select.scss
@@ -4,6 +4,9 @@
 @use "sass:map";
 
 .cly-vue-select-x {
+    .cly-vue-listbox {
+        background-color: map.get(c.$colors, "white");
+    }
     &__pop {
         .el-tabs {
             &__nav-wrap::after {
